# hermes-livekit

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
hermes_livekit/: __init__.py  adapter.py  plugin.yaml
